--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body {
+    font-family: 'Nunito', sans-serif;
+    background-color: linear-gradient(135deg, #f5f7fa 0%, #f8f9fa 100%);
+    background-image: url("https://www.transparenttextures.com/patterns/xv.png");
+
+}
